reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_hidden_header_field-2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: typescript
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name: hidden_header_test

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    test: TestInterface;
  }

  export interface TestInterface {
    endpoint: (
      input: {},
      headers: reflectapi_demo.tests.basic.HeadersWithHidden,
      options?: RequestOptions,
    ) => AsyncResult<{}, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace basic {
      export interface HeadersWithHidden {
        /**
         * Authorization header
         */
        authorization: string;
      }
    }
  }
}

namespace __implementation {

  function test__endpoint(client: Client) {
    return (
      input: {},
      headers: reflectapi_demo.tests.basic.HeadersWithHidden,
      options?: RequestOptions,
    ) =>
      __request<{}, reflectapi_demo.tests.basic.HeadersWithHidden, {}, {}>(
        client,
        "/test.endpoint",
        input,
        headers,
        options,
      );
  }
}
