reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_hidden_header_field-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "hidden_header_test",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/test.endpoint": {
      "description": "",
      "post": {
        "operationId": "test.endpoint",
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "description": "empty object",
                  "type": "object",
                  "properties": {}
                }
              }
            }
          }
        },
        "parameters": [
          {
            "name": "_authorization",
            "in": "header",
            "required": true,
            "schema": {
              "$ref": "#/components/schemas/std.string.String"
            },
            "description": "Authorization header"
          },
          {
            "name": "_x_internal_trace_id",
            "in": "header",
            "required": false,
            "schema": {
              "$ref": "#/components/schemas/std.string.String"
            },
            "description": "Internal tracking header, hidden from clients"
          }
        ]
      }
    }
  },
  "components": {
    "schemas": {
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
